--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -6,6 +6,9 @@ block content
     .docs-navbar
       a.off-canvas-toggle.link.link-primary.btn-action(href='#sidebar')
         i.icon.icon-bars
+      .navbar-center
+        .ridestyler-logo-full.hide-sm
+        .ridestyler-logo-icon.show-sm
       .btns.d-flex
         a.btn.btn-primary.ml-1(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
 
