--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -41,8 +41,8 @@
 .columns {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -$layout-spacing;
-  margin-right: -$layout-spacing;
+  margin-left: -$layout-spacing-lg;
+  margin-right: -$layout-spacing-lg;
 
   &.col-gapless {
     margin-left: 0;
@@ -382,6 +382,11 @@
 @media (max-width: $size-xs) {
   .container {
     padding: $layout-spacing $layout-spacing;
+  }
+
+  .columns {
+    margin-left: -$layout-spacing;
+    margin-right: -$layout-spacing;
   }
 
   .col-xs-12,
