--- a/src/utilities/_divider.scss
+++ b/src/utilities/_divider.scss
@@ -1,4 +1,5 @@
-// Divider
+$divider-size: 1px;
+
 .divider,
 .divider-vert {
   display: block;
@@ -11,13 +12,13 @@
     display: inline-block;
     font-size: $font-size-sm;
     padding: 0 $unit-2;
-    transform: translateY(-$font-size-sm + $border-width);
+    transform: translateY(-$divider-size);
   }
 }
 
 .divider {
-  border-top: $border-width solid $border-color-light;
-  height: $border-width;
+  border-top: $divider-size solid $border-color-light;
+  height: $divider-size;
   margin: $unit-2 0;
 
   &[data-content] {
@@ -30,7 +31,7 @@
   padding: $unit-4;
 
   &::before {
-    border-left: $border-width solid $border-color;
+    border-left: $divider-size solid $border-color;
     bottom: $unit-2;
     content: "";
     display: block;
