--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -1,8 +1,24 @@
 // Layout
+@mixin containerSize($paddingX, $paddingY) {
+  .container {
+    padding: $paddingX $paddingY;
+  }
+  
+  .columns {
+    margin-left: -$paddingX;
+    margin-right: -$paddingX;
+  }
+  .column {
+    padding-left: $paddingX;
+    padding-right: $paddingX;
+  }
+}
+
+@include containerSize($layout-spacing, $layout-spacing-lg);
+
 .container {
   margin-left: auto;
   margin-right: auto;
-  padding: $layout-spacing $layout-spacing-lg;
   width: 100%;
 
   $grid-spacing: ($layout-spacing / ($layout-spacing * 0 + 1)) * $html-font-size;
@@ -41,8 +57,6 @@
 .columns {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -$layout-spacing-lg;
-  margin-right: -$layout-spacing-lg;
 
   &.col-gapless {
     margin-left: 0;
@@ -61,8 +75,6 @@
 .column {
   flex: 1;
   max-width: 100%;
-  padding-left: $layout-spacing;
-  padding-right: $layout-spacing;
 
   &.col-12,
   &.col-11,
@@ -380,14 +392,7 @@
   }
 }
 @media (max-width: $size-xs) {
-  .container {
-    padding: $layout-spacing $layout-spacing;
-  }
-
-  .columns {
-    margin-left: -$layout-spacing;
-    margin-right: -$layout-spacing;
-  }
+  @include containerSize($layout-spacing, $layout-spacing);
 
   .col-xs-12,
   .col-xs-11,
