Removes accessibility section from getting started

--- a/docs/src/getting-started.pug
+++ b/docs/src/getting-started.pug
@@ -29,7 +29,7 @@ block docs-content
         .card
           .card-header
             .card-title.h5
-            .icon.icon-cogs
+            .icon.icon-cogs.mr-1
             | Custom version
           .card-body
             | Customize your version of ridestyler.ui
@@ -53,13 +53,6 @@ block docs-content
             | Changelog and release notes
           .card-footer
             a.btn.btn-primary(href="getting-started/whatsnew.html") View
-
-      .column.col-6.col-xs-12
-        .card
-          .card-header
-            .card-title.h5 Accessibility
-          .card-body.text-gray
-            | Coming soon
 
 
   include _layout/_footer.pug
