Updates heading size calc for headers/navbar

--- a/src/_headers.scss
+++ b/src/_headers.scss
@@ -1,6 +1,6 @@
 header {
     background-color: $bg-color;
-    padding: $layout-spacing-sm $layout-spacing-lg;
+    padding: $unit-4 $layout-spacing-lg;
     font-weight: 800;
 
     &.compact {
