--- a/docs/src/elements/headers.pug
+++ b/docs/src/elements/headers.pug
@@ -24,7 +24,7 @@ block docs-content
               | Wheel Co. 
               i.icon.icon-caret-down
         header
-          | Upload Your Photo
+          h1 Upload Your Photo
     
     p They look good below a #[a(href="../layout/navbar.html#navbar-branded") Navbar] or just fine 🕶 by themselves.
     
@@ -49,8 +49,8 @@ block docs-content
             button.link
               | Wheel Co. 
               i.icon.icon-caret-down
-        header.compact.text-center.bg-ridestyler-gray Download our new app!
+        header.compact.text-center.bg-ridestyler-gray.text-light Download our new app!
         header
-          | Upload Your Photo
+          h1 Upload Your Photo
 
   include ../_layout/_footer.pug
