Adds sidebar menu

--- a/docs/components/menu.html
+++ b/docs/components/menu.html
@@ -344,6 +344,17 @@
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
+            <h4 class="s-subtitle" id="menu-sidebar">Sidebars<a class="anchor" href="#menu-sidebar" aria-hidden="true">#</a></h4>
+            <p>Sidebars are a menu attached to the side of the screen</p>
+            <div class="docs-demo columns">
+              <div class="column col-4 col-xs-12">
+                <ul class="menu sidebar">
+                  <li class="menu-item"><a href="#">General</a></li>
+                  <li class="menu-item"><a href="#">Settings</a></li>
+                  <li class="menu-item"><a class="active" href="#">Integrations</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
           <div class="docs-footer container grid-lg" id="copyright">
             <p><a href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a> · <a href="https://ridestyler.com" target="_blank">RideStyler</a> · Version <span class="version"></span></p>
