--- a/docs/src/components/menu.pug
+++ b/docs/src/components/menu.pug
@@ -208,5 +208,18 @@ block docs-content
               </ul>
             </div>
           </div>
+    
+    +docs-subheading("menu-sidebar", "Sidebars")
+    p Sidebars are a menu attached to the side of the screen
+
+    .docs-demo.columns
+      .column.col-4.col-xs-12
+        ul.menu.sidebar
+          li.menu-item
+            a(href="#") General
+          li.menu-item
+            a(href="#") Settings
+          li.menu-item
+            a.active(href="#") Integrations
 
   include ../_layout/_footer.pug
