Updates navbar images to be served over HTTPS

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -18,8 +18,8 @@ $ridestyler-logo-text: 'https://static.ridestyler.net/temp/logos/ridestyler-logo
 $ridestyler-logo-icon: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-ICON.svg' !default;
 $ridestyler-logo-full: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-FULL.svg' !default;
 $ridestyler-logo-full-light: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-FULL-light.svg' !default;
-$ridestyler-logo-tagonly-black: 'http://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_black.svg' !default;
-$ridestyler-logo-tagonly-white: 'http://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_white.svg' !default;
+$ridestyler-logo-tagonly-black: 'https://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_black.svg' !default;
+$ridestyler-logo-tagonly-white: 'https://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_white.svg' !default;
 
 // Core colors
 $primary-color: $ridestyler-color-blue !default;
