--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -93,6 +93,8 @@ $html-font-size: 16px !default;
 $html-line-height: rem-calc(26px) !default;
 $font-size: rem-calc(16px) !default;
 $font-size-button: rem-calc(18px) !default;
+$font-size-xxs: rem-calc(11px) !default;
+$font-size-xs: rem-calc(12px) !default;
 $font-size-sm: rem-calc(14px) !default;
 $font-size-lg: rem-calc(20px) !default;
 $line-height: rem-calc(26px) !default;
