Adds 0 margin/padding rule to html/margin

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -21,6 +21,11 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 @mixin selection {
 	background: $primary-color;
 	color: $light-color;
