Adds .container.loading, .column.loading

--- a/docs/src/utilities/loading.pug
+++ b/docs/src/utilities/loading.pug
@@ -30,5 +30,13 @@ block docs-content
           <!-- loading element -->
           <div class="loading"></div>
           <div class="loading loading-lg"></div>
+    
+    p You can also add the #[code loading] class to #[code .container] or #[code .column] elements.
+
+    .docs-demo.columns
+      .column.col-12.loading
+        h1 Header 1
+        | Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam asperiores nobis assumenda consequatur expedita enim eius cumque fugit optio libero. Aliquid nam ut pariatur eaque voluptates exercitationem, deleniti suscipit molestias.
+
 
   include ../_layout/_footer.pug
