--- a/src/utilities/_loading.scss
+++ b/src/utilities/_loading.scss
@@ -2,7 +2,6 @@
 .loading {
 	@include loadingIndicator();
 
-	color: transparent !important;
 	min-height: $unit-4;
 	pointer-events: none;
 	position: relative;
@@ -16,5 +15,19 @@
 			margin-top: -$unit-4;
 			width: $unit-8;
 		}
+	}
+
+	&.container, &.column {
+		&:before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            
+            background: rgba($light-color, .75);
+        }
+
+        &:before, &:after {
+            z-index: $zindex-1;
+        }
 	}
 }
