Adds equal-height-columns

--- a/docs/layout/grid.html
+++ b/docs/layout/grid.html
@@ -402,6 +402,27 @@
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
+            <h4 class="s-subtitle" id="column-equal-height">Equal height columns<a class="anchor" href="#column-equal-height" aria-hidden="true">#</a></h4>
+            <p>You can add the <code>columns-equal-height</code> class to a <code>.columns</code> container to have equal height columns.</p>
+            <div class="columns columns-equal-height">
+              <div class="column col-4">
+                <div class="bg-gray docs-block p-centered">col</div>
+              </div>
+              <div class="column col-4">
+                <div class="bg-gray docs-block p-centered">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat quam suscipit incidunt laudantium possimus neque laboriosam consequuntur pariatur quis delectus illo, ea facere ducimus mollitia dolor ipsum modi voluptates!</div>
+              </div>
+              <div class="column col-4">
+                <div class="bg-gray docs-block p-centered">col</div>
+              </div>
+            </div>
+            <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"container"</span>&gt;</span>
+  <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"columns columns-equal-height"</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"column col-4"</span>&gt;</span>col<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"column col-4"</span>&gt;</span>really long col<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"column col-4"</span>&gt;</span>col<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+  <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+</code></pre>
           </div>
           <div class="docs-footer container grid-lg" id="copyright">
             <p><a href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a> · <a href="https://ridestyler.com" target="_blank">RideStyler</a> · Version <span class="version"></span></p>
