--- a/docs/src/layout/grid.pug
+++ b/docs/src/layout/grid.pug
@@ -218,5 +218,29 @@ block docs-content
               <div class="column">col</div>
             </div>
           </div>
+    
+    +docs-subheading('column-equal-height', 'Equal height columns')
+
+    p
+      | You can add the #[code columns-equal-height] class to a #[code .columns] container to have equal height columns.
+    
+    .columns.columns-equal-height
+      .column.col-4
+        .bg-gray.docs-block.p-centered col
+      .column.col-4
+        .bg-gray.docs-block.p-centered Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat quam suscipit incidunt laudantium possimus neque laboriosam consequuntur pariatur quis delectus illo, ea facere ducimus mollitia dolor ipsum modi voluptates!
+      .column.col-4
+        .bg-gray.docs-block.p-centered col
+
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <div class="container">
+            <div class="columns columns-equal-height">
+              <div class="column col-4">col</div>
+              <div class="column col-4">really long col</div>
+              <div class="column col-4">col</div>
+            </div>
+          </div>
 
   include ../_layout/_footer.pug
