--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -71,6 +71,13 @@
     flex-wrap: nowrap;
     overflow-x: auto;
   }
+
+  &.columns-equal-height {
+    .column {
+      display: flex;
+      flex: 0 1 auto;
+    }
+  }
 }
 .column {
   flex: 1;
