Adds .disabled class for links

--- a/docs/src/elements/links.pug
+++ b/docs/src/elements/links.pug
@@ -18,10 +18,12 @@ block docs-content
         span.link.link-primary primary link 
       .column.col-12
         span.link.link-secondary secondary link
+      .column.col-12
+        span.link.disabled disabled link
     
     p
       | Add the #[code link] class to #{'<span>'} or #{'<button>'} elements for a default link. 
-      | There are classes #[code link-primary] and #[code link-secondary] for predefined primary and secondary links.
+      | There are classes #[code link-primary], #[code link-secondary] and #[code disabled] for predefined primary and secondary links.
 
     +docs-subheading('links-anchor', 'Anchors')
     
