Adds success & error button styles

--- a/docs/src/elements/buttons.pug
+++ b/docs/src/elements/buttons.pug
@@ -16,10 +16,12 @@ block docs-content
         button.btn default button
         button.btn.btn-primary primary button
         button.btn.btn-secondary secondary button
+        button.btn.btn-success success button
+        button.btn.btn-error error button
 
     p
       | Add the #[code btn] class to #{'<a>'}, #{'<input>'} or #{'<button>'} elements for a default button. 
-      | There are classes #[code btn-primary] and #[code btn-secondary] for predefined primary and secondary buttons.
+      | There are classes #[code btn-primary], #[code btn-secondary], #[code btn-success] and #[code btn-error] for predefined primary, secondary, success and error buttons.
 
     pre.code(data-lang='HTML')
       code
