--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -54,6 +54,21 @@
 		}
 	}
 
+	.card-footer {
+		$footer-button-spacing: $unit-2;
+
+		> {
+			.btn, %link {
+				margin-right: $footer-button-spacing;
+			}
+		}
+
+		&.text-right {
+			margin-right: 0;
+			margin-left: $footer-button-spacing;
+		}
+	}
+
 	&.card-action {
 		border-left: 3rem solid $ridestyler-color-dark-gray;
 		transition: box-shadow 500ms cubic-bezier(0.19, 1, 0.22, 1);
