--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -92,7 +92,7 @@ $unit-16: 6.4rem !default;
 $html-font-size: 16px !default;
 $html-line-height: rem-calc(26px) !default;
 $font-size: rem-calc(16px) !default;
-$font-size-button: rem-calc(18px) !default;
+$font-size-button: 0.8rem !default;
 $font-size-xxs: rem-calc(11px) !default;
 $font-size-xs: rem-calc(12px) !default;
 $font-size-sm: rem-calc(14px) !default;
