--- a/src/utilities/_loading.scss
+++ b/src/utilities/_loading.scss
@@ -25,6 +25,7 @@
 		top: 0; left: 0; right: 0; bottom: 0;
 		
 		background:  rgba($light-color, .75);
+		border-radius: inherit;
 	}
 
 	&:before, &:after {
